# mtl

./: Cargo.toml  README.md  compile.sh  current_thinking.tex  scratchpad.tex
ARM/: notes.md
hal/: Cargo.toml
hal/src/: _device.rs  api.tex  batch.rs  challenges.tex  gpu.rs  lib.rs  math.tex  multi.tex  types.rs
hal/src/encoder/: blit.rs  compute.rs  mod.rs  notes.tex
hal/src/notes/: introduction.tex  memory.tex  model.tex
hal/src/pipeline/: archive.rs  mod.rs  notes.tex
hal/src/resource/: _buffer.rs  buffer.rs  heap.rs  mod.rs  texture.rs
main/: Cargo.toml  build.rs
main/src/: crt.rs  main.rs  metal.rs  numbers.rs  testing number system.rs
main/src/others/: distribution.rs  metal.rs
mtl/: Cargo.toml  bindings.tex  build.rs  notes.txt
mtl/examples/compute/: main.rs  shader.air  shader.metal  shader.metallib
mtl/examples/go/: archive.metallib  main.rs  shader.metal  shader.metallib
mtl/examples/sum/: main.rs  shader.metal  shader.metallib
mtl/msl/: address-spaces.tex  data-types.tex  function-variable-declarations.tex  introduction.tex
mtl/notes/: guide.tex  notes.tex
mtl/src/: buffer.rs  command_queue.rs  function.rs  introspection.rs  lib.rs  library.rs  macros.rs  resource.rs  shader.air  shader.metal  shader.metallib  synchronization.rs  texture.rs  types.rs
mtl/src/command_buffer/: creating_encoders.rs  debugging.rs  descriptor.rs  indirect.rs  io_command_buffer.rs  mod.rs  other.rs
mtl/src/device/: device_inspection.rs  library_creation.rs  mod.rs  pipeline_state_creation.rs  resource_creation.rs  work_submission.rs
mtl/src/encoder/: blit.rs  compute.rs  counter.rs  indirect.rs  mod.rs
mtl/src/heap/: descriptor.rs  heap.rs  mod.rs  types.rs
mtl/src/pipeline/: compute_descriptor.rs  compute_state.rs  mod.rs  pipeline.tex  stage_input_output.rs  types.rs
saga/: Bridge.c  Bridge.h  ContentView.swift  saga-Bridging-Header.h  sagaApp.swift  sagaDebug.entitlements
saga.xcodeproj/: project.pbxproj
saga.xcodeproj/project.xcworkspace/xcuserdata/josephjohnston.xcuserdatad/: UserInterfaceState.xcuserstate
saga.xcodeproj/xcshareddata/xcschemes/: saga.xcscheme
saga.xcodeproj/xcuserdata/josephjohnston.xcuserdatad/xcschemes/: xcschememanagement.plist
sagaTests/: sagaTests.swift
sagaUITests/: sagaUITests.swift  sagaUITestsLaunchTests.swift
zpu/: CRT.tex  Cargo.toml  build.rs
zpu/shaders/: p.h  shader.metal  shader_ios.metallib  shader_macos.metallib
zpu/src/: lib.rs  main.rs  naive.rs  native.rs  nums.rs  params.rs  reference.rs  test.rs
zpu/src/shaders/: a.out  algorithm_1.rs  algorithm_2_draft.cpp  arithmetic.h  c32_zetas.h  crt.metal  crt.metallib  expand.cpp  expand.metal  fp.h  library_writer.rs  mod.rs  mult.metal  old_expanded.metal  out.cpp  reduce.metal  risc0.metal  risc0.metallib  rolled.metal  rolled_ios.metallib  rolled_macos.metallib  rolled_old.cpp  shader.metal  test.metal  test.metallib  unrolled'.metal  unrolled.metal  unrolled.metallib  unrolled_macos.metallib  zetas.tex
zpu/src/shaders/archives/: risc0.metallib
