[package]
name = "hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtl = { package = "mtl", path = "../mtl" }
objc = { package = "objc2", version = "0.5.2" }
objc_foundation = { package = "objc2-foundation", version = "0.2.2", features = [
    "all",
] }
block = { package = "block2", version = "0.4.0" }
half = "2.1.0"
