[package]
name = "main"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zpu = {path = "../zpu" }
# hal = {path = "../hal" }
# primal = "0.3.2"
rand = "0.8.5"
# textplots = "0.6"
num-modular = "0.5.1"
