[package]
name = "mtl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = { package = "objc2", version = "0.5.2" }
objc_foundation = { package = "objc2-foundation", version = "0.2.2", features = [
    "all",
] }
block = { package = "block2", version = "0.4.0" }
bitflags = "1.3.2"
rand = "0.8.5"

[build-dependencies]
cc = "1.0"

[[example]]
name = "go"

[[example]]
name = "sum"


# [workspace]
# members = [
#     "examples/go"
# ]
